fixed package names and other smells